// Vitest Snapshot v1

exports[`DaySelectorButton > renders snapshot for next day 1`] = `
<button
  aria-keyshortcuts="ArrowRight"
  aria-label="Zu nächstem Tag wechseln"
  class="origin-center text-primary-500 hover:scale-110 hover:text-primary-600 disabled:cursor-not-allowed disabled:text-primary-400 disabled:opacity-25 active:text-primary-800"
  title="Zu nächstem Tag wechseln"
>
  <svg
    aria-hidden="true"
    class="h-16 w-16"
    height="1.2em"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 256 512"
    width="1.2em"
  >
    <path
      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4l-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
      fill="currentColor"
    />
  </svg>
</button>
`;

exports[`DaySelectorButton > renders snapshot for previous day 1`] = `
<button
  aria-keyshortcuts="ArrowLeft"
  aria-label="Zu vorherigem Tag wechseln"
  class="origin-center text-primary-500 hover:scale-110 hover:text-primary-600 disabled:cursor-not-allowed disabled:text-primary-400 disabled:opacity-25 active:text-primary-800"
  title="Zu vorherigem Tag wechseln"
>
  <svg
    aria-hidden="true"
    class="h-16 w-16"
    height="1.2em"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 256 512"
    width="1.2em"
  >
    <path
      d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
      fill="currentColor"
    />
  </svg>
</button>
`;
